--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Min fågel</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
-    <h1>TEST</h1>
+<body onload="initSize()">
+    <div id="container" onload="myMove()">
+        <div id="animate">
+            <img src="flying-bird.gif">
+        </div>
+        </div>
 </body>
 </html>
